--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Japanese Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/katsudon.html">Katsudon</a>
-        <a href="./recipes/beef-sukiyaki.html">Beef Sukiyaki</a>
-        <a href="./recipes/chicken-yakisoba.html">Chicken Yakisoba</a>
+        <h1>Japanese Recipes</h1>
+        <ul>
+            <li><a href="./recipes/katsudon.html">Katsudon</a></li>
+            <li><a href="./recipes/beef-sukiyaki.html">Beef Sukiyaki</a></li>
+            <li><a href="./recipes/chicken-yakisoba.html">Chicken Yakisoba</a></li>
+        </ul>
     </body>
 </html>
