New elements, class and introduce css in index

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Japanese Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Japanese Recipes</h1>
-        <ul>
-            <li><a href="./recipes/katsudon.html">Katsudon</a></li>
-            <li><a href="./recipes/beef-sukiyaki.html">Beef Sukiyaki</a></li>
-            <li><a href="./recipes/chicken-yakisoba.html">Chicken Yakisoba</a></li>
+        <ul class="ul-index">
+            <li><img src="./img/kastudon-pic.jpg" alt="Katsudon" class="img-index"><a href="./recipes/katsudon.html">Katsudon</a></li>
+            <li><img src="./img/Beef-sukiyaki-pic.jpg" alt="Beff-sukiyaki"  class="img-index"><a href="./recipes/beef-sukiyaki.html">Beef Sukiyaki</a></li>
+            <li><img src="./img/chicken-yakisoba-pic.jpg" alt="chicken-yakisoba"  class="img-index"><a href="./recipes/chicken-yakisoba.html">Chicken Yakisoba</a></li>
         </ul>
     </body>
 </html>
