Css in recipes pages and added back to index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Japanese Recipes</h1>
+        <h1 class="header-h1">Japanese Recipes</h1>
         <ul class="ul-index">
             <li><img src="./img/kastudon-pic.jpg" alt="Katsudon" class="img-index"><a href="./recipes/katsudon.html">Katsudon</a></li>
             <li><img src="./img/Beef-sukiyaki-pic.jpg" alt="Beff-sukiyaki"  class="img-index"><a href="./recipes/beef-sukiyaki.html">Beef Sukiyaki</a></li>
