--- a/recipes/beef-sukiyaki.html
+++ b/recipes/beef-sukiyaki.html
@@ -3,35 +3,43 @@
     <head lang="en">
         <meta charset="UTF-8">
         <Title>Beef Sukiyaki</Title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Beef Sukiyaki</h1>
-        <img src="../img/Beef-sukiyaki-pic.jpg" alt="Beef Sukiyaki">
-        <h2>Steam Beef with noodles, vegetables and tofu  </h2>
-        <p>Sukiyaki features vegetables, noodles, tofu, and steak served in a steaming, flavorful broth made with dashi, mirin, and soy sauce. This Japanese dish is traditionally cooked at the table in a pot of simmering broth. In this recipe, it's cooked on the stovetop for convenience.</p>
-        <h3>Ingridients</h3>
-        <ul>
-            <li>1/2 cup prepared dashi stock</li>
-            <li>3/4 cup soy sauce</li>
-            <li>3/4 cup mirin</li>
-            <li>1/4 cup white sugar</li>
-            <li>8 ounces shirataki noodles</li>
-            <li>3 tablespoons canola oil, divided</li>
-            <li>1 pound beef top sirloin, thinly sliced</li>
-            <li>1 medium onion, thinly sliced</li>
-            <li>2 medium carrots, thinly sliced</li>
-            <li>2 stalks celery, thinly sliced</li>
-            <li>4 ounces sliced fresh mushrooms (button, shiitake, or enoki)</li>
-            <li>5 green onions, cut into 2-inch pieces</li>
-            <li>1 (14 ounce) package firm tofu, cut into cubes</li>
-        </ul>
-        <h3>Steps</h3>
-        <ol>
-            <li>Combine dashi, soy sauce, mirin, and sugar in a bowl; set aside.</li>
-            <li>Soak noodles in boiling water for 1 minute. Drain, rinse under cold water, and drain again.</li>
-            <li>Heat 2 tablespoons oil in a pot over medium heat. Add beef; cook and stir until no longer pink, 2 to 3 minutes. Transfer beef to a plate.</li>
-            <li>Add remaining 1 tablespoon oil to the pot and heat over medium heat. Add onion, carrots, celery, and mushrooms; cook and stir until softened, about 4 minutes. Add dashi mixture, noodles, beef, tofu, and green onions; bring to a simmer.</li>
-            <li>Remove from the heat and ladle hot sukiyaki into four bowls.</li>
-        </ol>
+        <div class="recipe-container">
+            <div class="content-left">
+                <h1>Beef Sukiyaki</h1>
+                <img src="../img/Beef-sukiyaki-pic.jpg" alt="Beef Sukiyaki" class="img-recipe">
+                <h2>Steam Beef with noodles, vegetables and tofu  </h2>
+                <p>Sukiyaki features vegetables, noodles, tofu, and steak served in a steaming, flavorful broth made with dashi, mirin, and soy sauce. This Japanese dish is traditionally cooked at the table in a pot of simmering broth. In this recipe, it's cooked on the stovetop for convenience.</p>
+            </div>
+            <div class="content-right">
+                <h3>Ingridients</h3>
+                <ul>
+                    <li>1/2 cup prepared dashi stock</li>
+                    <li>3/4 cup soy sauce</li>
+                    <li>3/4 cup mirin</li>
+                    <li>1/4 cup white sugar</li>
+                    <li>8 ounces shirataki noodles</li>
+                    <li>3 tablespoons canola oil, divided</li>
+                    <li>1 pound beef top sirloin, thinly sliced</li>
+                    <li>1 medium onion, thinly sliced</li>
+                    <li>2 medium carrots, thinly sliced</li>
+                    <li>2 stalks celery, thinly sliced</li>
+                    <li>4 ounces sliced fresh mushrooms (button, shiitake, or enoki)</li>
+                    <li>5 green onions, cut into 2-inch pieces</li>
+                    <li>1 (14 ounce) package firm tofu, cut into cubes</li>
+                </ul>
+                <h3>Steps</h3>
+                <ol>
+                    <li>Combine dashi, soy sauce, mirin, and sugar in a bowl; set aside.</li>
+                    <li>Soak noodles in boiling water for 1 minute. Drain, rinse under cold water, and drain again.</li>
+                    <li>Heat 2 tablespoons oil in a pot over medium heat. Add beef; cook and stir until no longer pink, 2 to 3 minutes. Transfer beef to a plate.</li>
+                    <li>Add remaining 1 tablespoon oil to the pot and heat over medium heat. Add onion, carrots, celery, and mushrooms; cook and stir until softened, about 4 minutes. Add dashi mixture, noodles, beef, tofu, and green onions; bring to a simmer.</li>
+                    <li>Remove from the heat and ladle hot sukiyaki into four bowls.</li>
+                </ol>
+                <a href="../index.html" class="abtn-back"> Back</a>
+            </div>
+        </div>
     </body>
 </html>
