--- a/recipes/chicken-yakisoba.html
+++ b/recipes/chicken-yakisoba.html
@@ -3,33 +3,41 @@
     <head lang="en">
         <meta charset="UTF-8">
         <Title>Chicken Yakisoba</Title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Chicken Yakisoba>
-        <img src="../img/chicken-yakisoba-pic.jpg" alt="Chicken Yakisoba">
-        <h2>Chicken noodle dish</h2>
-        <p>This traditional Japanese yakisoba noodle dish includes cabbage and chicken in a spicy sauce.</p>
-        <h3>Ingridients</h3>
-        <ul>
-            <li>2 tablespoons canola oil</li>
-            <li>1 tablespoon sesame oil</li>
-            <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
-            <li>2 cloves garlic, minced</li>
-            <li>2 tablespoons Asian-style chile paste</li>
-            <li>1/2 cup soy sauce</li>
-            <li>1 tablespoon canola oil</li>
-            <li>1/2 medium head cabbage, thinly sliced</li>
-            <li>1 onion, sliced</li>
-            <li>2 carrots, cut into matchsticks</li>
-            <li>1 tablespoon salt</li>
-            <li>2 pounds cooked yakisoba noodles</li>
-            <li>2 tablespoons pickled ginger, or to taste (Optional)</li>
-        </ul>
-        <h3>Steps</h3>
-        <ol>
-            <li>Heat 2 tablespoons canola oil and sesame oil in a large skillet over medium-high heat. Cook and stir chicken and garlic in hot oil until fragrant, about 1 minute. Stir chile paste into chicken mixture; cook and stir until chicken is completely browned, 3 to 4 minutes. Add soy sauce and simmer for 2 minutes. Pour chicken and sauce into a bowl.</li>
-            <li>Heat 1 tablespoon canola oil in the skillet over medium-high heat; cook and stir cabbage, onion, carrots, and salt in hot oil until cabbage is wilted, 3 to 4 minutes.</li>
-            <li>Stir the chicken mixture into the cabbage mixture. Add noodles; cook and stir until noodles are hot and chicken is no longer pink inside, 3 to 4 minutes. Garnish with pickled ginger.</li>
-        </ol>
+        <div class="recipe-container">
+            <div class="content-left">
+                <h1>Chicken Yakisoba</h1>
+                <img src="../img/chicken-yakisoba-pic.jpg" alt="Chicken Yakisoba" class="img-recipe">
+                <h2>Chicken noodle dish</h2>
+                <p>This traditional Japanese yakisoba noodle dish includes cabbage and chicken in a spicy sauce.</p>
+            </div>
+            <div class="content-right">
+                <h3>Ingridients</h3>
+                <ul>
+                    <li>2 tablespoons canola oil</li>
+                    <li>1 tablespoon sesame oil</li>
+                    <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
+                    <li>2 cloves garlic, minced</li>
+                    <li>2 tablespoons Asian-style chile paste</li>
+                    <li>1/2 cup soy sauce</li>
+                    <li>1 tablespoon canola oil</li>
+                    <li>1/2 medium head cabbage, thinly sliced</li>
+                    <li>1 onion, sliced</li>
+                    <li>2 carrots, cut into matchsticks</li>
+                    <li>1 tablespoon salt</li>
+                    <li>2 pounds cooked yakisoba noodles</li>
+                    <li>2 tablespoons pickled ginger, or to taste (Optional)</li>
+                </ul>
+                <h3>Steps</h3>
+                <ol>
+                    <li>Heat 2 tablespoons canola oil and sesame oil in a large skillet over medium-high heat. Cook and stir chicken and garlic in hot oil until fragrant, about 1 minute. Stir chile paste into chicken mixture; cook and stir until chicken is completely browned, 3 to 4 minutes. Add soy sauce and simmer for 2 minutes. Pour chicken and sauce into a bowl.</li>
+                    <li>Heat 1 tablespoon canola oil in the skillet over medium-high heat; cook and stir cabbage, onion, carrots, and salt in hot oil until cabbage is wilted, 3 to 4 minutes.</li>
+                    <li>Stir the chicken mixture into the cabbage mixture. Add noodles; cook and stir until noodles are hot and chicken is no longer pink inside, 3 to 4 minutes. Garnish with pickled ginger.</li>
+                </ol>
+                <a href="../index.html" class="abtn-back"> Back</a>
+            </div>
+        </div>
     </body>
 </html>
