--- a/recipes/katsudon.html
+++ b/recipes/katsudon.html
@@ -3,30 +3,38 @@
     <head lang="en">
         <meta charset="UTF-8">
         <Title>Katsudon</Title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Katsudon</h1>
-        <img src="../img/kastudon-pic.jpg" alt="Katsudon">
-        <h2>Japanese-Style Crispy Fried Pork Bowl (Tonkatsu Donburi)</h2>
-        <p>Recipe for a popular Japanese rice bowl, also known as Katsudon. Garnish with sliced green onions.</p>
-        <h3>Ingridients</h3>
-        <ul>
-            <li>2/3 cup prepared dashi stock</li>
-            <li>2 teaspoons white sugar</li>
-            <li>2 teaspoons mirin(Japanese sweet wine)</li>
-            <li>2 teaspoon soy sauce</li>
-            <li>1/2 teaspoon salt</li>
-            <li>1 tablespoon vegetable oil</li>
-            <li>1 small onion, chopped</li>
-            <li>2(3 ounce) fried breaded pork chops, sliced int long strips</li>
-            <li>2 eggs, beaten</li>
-            <li>1 1/2 cups of cooked short-grain rice</li>
-        </ul>
-        <h3>Steps</h3>
-        <ol>
-            <li>Mix dashi, sugar, mirin, soy sauce, and salt together in a small bowl.</li>
-            <li>Heat vegetable oil in a small skillet over medium heat. Add onion; cook and stir until translucent, about 5 minutes. Stir in dashi mixture. Lay pork slices carefully on top of the onions. Drizzle eggs around the slices. Cover skillet and cook until eggs are set, about 2 minutes.</li>
-            <li>Divide rice between 2 bowls. Top each with half the onions, eggs, and pork slices.</li>
-        </ol>
+        <div class="recipe-container">
+            <div class="content-left">
+                <h1>Katsudon</h1>
+                <img src="../img/kastudon-pic.jpg" alt="Katsudon" class="img-recipe">
+                <h2>Japanese-Style Crispy Fried Pork Bowl (Tonkatsu Donburi)</h2>
+                <p>Recipe for a popular Japanese rice bowl, also known as Katsudon. Garnish with sliced green onions.</p>
+            </div>
+            <div class="content-right">
+                <h3>Ingridients</h3>
+                <ul>
+                    <li>2/3 cup prepared dashi stock</li>
+                    <li>2 teaspoons white sugar</li>
+                    <li>2 teaspoons mirin(Japanese sweet wine)</li>
+                    <li>2 teaspoon soy sauce</li>
+                    <li>1/2 teaspoon salt</li>
+                    <li>1 tablespoon vegetable oil</li>
+                    <li>1 small onion, chopped</li>
+                    <li>2(3 ounce) fried breaded pork chops, sliced int long strips</li>
+                    <li>2 eggs, beaten</li>
+                    <li>1 1/2 cups of cooked short-grain rice</li>
+                </ul>
+                <h3>Steps</h3>
+                <ol>
+                    <li>Mix dashi, sugar, mirin, soy sauce, and salt together in a small bowl.</li>
+                    <li>Heat vegetable oil in a small skillet over medium heat. Add onion; cook and stir until translucent, about 5 minutes. Stir in dashi mixture. Lay pork slices carefully on top of the onions. Drizzle eggs around the slices. Cover skillet and cook until eggs are set, about 2 minutes.</li>
+                    <li>Divide rice between 2 bowls. Top each with half the onions, eggs, and pork slices.</li>
+                </ol>
+                <a href="../index.html" class="abtn-back"> Back</a>
+            </div>
+        </div>
     </body>
 </html>
