Fix padding, adding header & image resize

--- a/recipes/katsudon.html
+++ b/recipes/katsudon.html
@@ -8,24 +8,27 @@
     <body>
         <div class="recipe-container">
             <div class="content-left">
+                <a href="../index.html" class="abtn-back"> Back</a>
                 <h1>Katsudon</h1>
-                <img src="../img/kastudon-pic.jpg" alt="Katsudon" class="img-recipe">
+                <div class="img-recipe">
+                    <img src="../img/kastudon-pic.jpg" alt="Katsudon">
+                </div>
                 <h2>Japanese-Style Crispy Fried Pork Bowl (Tonkatsu Donburi)</h2>
                 <p>Recipe for a popular Japanese rice bowl, also known as Katsudon. Garnish with sliced green onions.</p>
             </div>
             <div class="content-right">
                 <h3>Ingridients</h3>
                 <ul>
-                    <li>2/3 cup prepared dashi stock</li>
-                    <li>2 teaspoons white sugar</li>
-                    <li>2 teaspoons mirin(Japanese sweet wine)</li>
-                    <li>2 teaspoon soy sauce</li>
-                    <li>1/2 teaspoon salt</li>
-                    <li>1 tablespoon vegetable oil</li>
-                    <li>1 small onion, chopped</li>
-                    <li>2(3 ounce) fried breaded pork chops, sliced int long strips</li>
-                    <li>2 eggs, beaten</li>
-                    <li>1 1/2 cups of cooked short-grain rice</li>
+                    <li><span>2/3</span> cup prepared dashi stock</li>
+                    <li><span>2</span> teaspoons white sugar</li>
+                    <li><span>2</span> teaspoons mirin(Japanese sweet wine)</li>
+                    <li><span>2</span> teaspoon soy sauce</li>
+                    <li><span>1/2</span> teaspoon salt</li>
+                    <li><span>1</span> tablespoon vegetable oil</li>
+                    <li><span>1</span> small onion, chopped</li>
+                    <li><span>2</span>(3 ounce) fried breaded pork chops, sliced int long strips</li>
+                    <li><span>2</span> eggs, beaten</li>
+                    <li><span>1</span> 1/2 cups of cooked short-grain rice</li>
                 </ul>
                 <h3>Steps</h3>
                 <ol>
@@ -33,7 +36,6 @@
                     <li>Heat vegetable oil in a small skillet over medium heat. Add onion; cook and stir until translucent, about 5 minutes. Stir in dashi mixture. Lay pork slices carefully on top of the onions. Drizzle eggs around the slices. Cover skillet and cook until eggs are set, about 2 minutes.</li>
                     <li>Divide rice between 2 bowls. Top each with half the onions, eggs, and pork slices.</li>
                 </ol>
-                <a href="../index.html" class="abtn-back"> Back</a>
             </div>
         </div>
     </body>
