--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 class="header-h1">Japanese Recipes</h1>
-        <ul class="ul-index">
-            <li><img src="./img/kastudon-pic.jpg" alt="Katsudon" class="img-index"><a href="./recipes/katsudon.html">Katsudon</a></li>
-            <li><img src="./img/Beef-sukiyaki-pic.jpg" alt="Beff-sukiyaki"  class="img-index"><a href="./recipes/beef-sukiyaki.html">Beef Sukiyaki</a></li>
-            <li><img src="./img/chicken-yakisoba-pic.jpg" alt="chicken-yakisoba"  class="img-index"><a href="./recipes/chicken-yakisoba.html">Chicken Yakisoba</a></li>
-        </ul>
+        <div class="main-container">
+            <header>
+                <h1 class="header-h1">Japanese <span>Recipes</span></h1>
+            </header>
+            <div class="content-index">
+                <ul class="ul-index">
+                    <li><img src="./img/kastudon-pic.jpg" alt="Katsudon" class="img-index"><a href="./recipes/katsudon.html">Katsudon</a></li>
+                    <li><img src="./img/Beef-sukiyaki-pic.jpg" alt="Beff-sukiyaki"  class="img-index"><a href="./recipes/beef-sukiyaki.html">Beef Sukiyaki</a></li>
+                    <li><img src="./img/chicken-yakisoba-pic.jpg" alt="chicken-yakisoba"  class="img-index"><a href="./recipes/chicken-yakisoba.html">Chicken Yakisoba</a></li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
