--- a/recipes/beef-sukiyaki.html
+++ b/recipes/beef-sukiyaki.html
@@ -8,27 +8,30 @@
     <body>
         <div class="recipe-container">
             <div class="content-left">
+                <a href="../index.html" class="abtn-back"> Back</a><br>
                 <h1>Beef Sukiyaki</h1>
-                <img src="../img/Beef-sukiyaki-pic.jpg" alt="Beef Sukiyaki" class="img-recipe">
+                <div class="img-recipe">
+                    <img src="../img/Beef-sukiyaki-pic.jpg" alt="Beef Sukiyaki">
+                </div>
                 <h2>Steam Beef with noodles, vegetables and tofu  </h2>
                 <p>Sukiyaki features vegetables, noodles, tofu, and steak served in a steaming, flavorful broth made with dashi, mirin, and soy sauce. This Japanese dish is traditionally cooked at the table in a pot of simmering broth. In this recipe, it's cooked on the stovetop for convenience.</p>
             </div>
             <div class="content-right">
                 <h3>Ingridients</h3>
                 <ul>
-                    <li>1/2 cup prepared dashi stock</li>
+                    <li><span>1/2</span> cup prepared dashi stock</li>
                     <li>3/4 cup soy sauce</li>
-                    <li>3/4 cup mirin</li>
-                    <li>1/4 cup white sugar</li>
-                    <li>8 ounces shirataki noodles</li>
-                    <li>3 tablespoons canola oil, divided</li>
-                    <li>1 pound beef top sirloin, thinly sliced</li>
-                    <li>1 medium onion, thinly sliced</li>
-                    <li>2 medium carrots, thinly sliced</li>
-                    <li>2 stalks celery, thinly sliced</li>
-                    <li>4 ounces sliced fresh mushrooms (button, shiitake, or enoki)</li>
-                    <li>5 green onions, cut into 2-inch pieces</li>
-                    <li>1 (14 ounce) package firm tofu, cut into cubes</li>
+                    <li><span>3/4</span> cup mirin</li>
+                    <li><span>1/4</span> cup white sugar</li>
+                    <li><span>8</span> ounces shirataki noodles</li>
+                    <li><span>3</span> tablespoons canola oil, divided</li>
+                    <li><span>1</span> pound beef top sirloin, thinly sliced</li>
+                    <li><span>1</span> medium onion, thinly sliced</li>
+                    <li><span>2</span> medium carrots, thinly sliced</li>
+                    <li><span>2</span> stalks celery, thinly sliced</li>
+                    <li><span>4</span> ounces sliced fresh mushrooms (button, shiitake, or enoki)</li>
+                    <li><span>5</span> green onions, cut into 2-inch pieces</li>
+                    <li><span>1</span> (14 ounce) package firm tofu, cut into cubes</li>
                 </ul>
                 <h3>Steps</h3>
                 <ol>
@@ -38,7 +41,7 @@
                     <li>Add remaining 1 tablespoon oil to the pot and heat over medium heat. Add onion, carrots, celery, and mushrooms; cook and stir until softened, about 4 minutes. Add dashi mixture, noodles, beef, tofu, and green onions; bring to a simmer.</li>
                     <li>Remove from the heat and ladle hot sukiyaki into four bowls.</li>
                 </ol>
-                <a href="../index.html" class="abtn-back"> Back</a>
+               
             </div>
         </div>
     </body>
