--- a/recipes/chicken-yakisoba.html
+++ b/recipes/chicken-yakisoba.html
@@ -8,27 +8,30 @@
     <body>
         <div class="recipe-container">
             <div class="content-left">
+                <a href="../index.html" class="abtn-back"> Back</a>
                 <h1>Chicken Yakisoba</h1>
-                <img src="../img/chicken-yakisoba-pic.jpg" alt="Chicken Yakisoba" class="img-recipe">
+                <div class="img-recipe">
+                    <img src="../img/chicken-yakisoba-pic.jpg" alt="Chicken Yakisoba">
+                </div>
                 <h2>Chicken noodle dish</h2>
                 <p>This traditional Japanese yakisoba noodle dish includes cabbage and chicken in a spicy sauce.</p>
             </div>
             <div class="content-right">
                 <h3>Ingridients</h3>
                 <ul>
-                    <li>2 tablespoons canola oil</li>
-                    <li>1 tablespoon sesame oil</li>
-                    <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
-                    <li>2 cloves garlic, minced</li>
-                    <li>2 tablespoons Asian-style chile paste</li>
-                    <li>1/2 cup soy sauce</li>
-                    <li>1 tablespoon canola oil</li>
-                    <li>1/2 medium head cabbage, thinly sliced</li>
-                    <li>1 onion, sliced</li>
-                    <li>2 carrots, cut into matchsticks</li>
-                    <li>1 tablespoon salt</li>
-                    <li>2 pounds cooked yakisoba noodles</li>
-                    <li>2 tablespoons pickled ginger, or to taste (Optional)</li>
+                    <li><span>2</span> tablespoons canola oil</li>
+                    <li><span>1</span> tablespoon sesame oil</li>
+                    <li><span>2</span> skinless, boneless chicken breast halves - cut into bite-size pieces</li>
+                    <li><span>2</span> cloves garlic, minced</li>
+                    <li><span>2</span> tablespoons Asian-style chile paste</li>
+                    <li><span>1/2</span> cup soy sauce</li>
+                    <li><span>1</span> tablespoon canola oil</li>
+                    <li><span>1/2</span> medium head cabbage, thinly sliced</li>
+                    <li><span>1</span> onion, sliced</li>
+                    <li><span>2</span> carrots, cut into matchsticks</li>
+                    <li><span>1</span> tablespoon salt</li>
+                    <li><span>2</span> pounds cooked yakisoba noodles</li>
+                    <li><span>2</span> tablespoons pickled ginger, or to taste (Optional)</li>
                 </ul>
                 <h3>Steps</h3>
                 <ol>
@@ -36,7 +39,6 @@
                     <li>Heat 1 tablespoon canola oil in the skillet over medium-high heat; cook and stir cabbage, onion, carrots, and salt in hot oil until cabbage is wilted, 3 to 4 minutes.</li>
                     <li>Stir the chicken mixture into the cabbage mixture. Add noodles; cook and stir until noodles are hot and chicken is no longer pink inside, 3 to 4 minutes. Garnish with pickled ginger.</li>
                 </ol>
-                <a href="../index.html" class="abtn-back"> Back</a>
             </div>
         </div>
     </body>
