Adding media queries file & adding layout for mobile

--- a/recipes/beef-sukiyaki.html
+++ b/recipes/beef-sukiyaki.html
@@ -9,9 +9,11 @@
         <div class="recipe-container">
             <div class="content-left">
                 <a href="../index.html" class="abtn-back"> Back</a><br>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <h1>Beef Sukiyaki</h1>
                 <div class="img-recipe">
                     <img src="../img/Beef-sukiyaki-pic.jpg" alt="Beef Sukiyaki">
+                    <link rel="stylesheet" href="../mediaqueries.css">
                 </div>
                 <h2>Steam Beef with noodles, vegetables and tofu  </h2>
                 <p>Sukiyaki features vegetables, noodles, tofu, and steak served in a steaming, flavorful broth made with dashi, mirin, and soy sauce. This Japanese dish is traditionally cooked at the table in a pot of simmering broth. In this recipe, it's cooked on the stovetop for convenience.</p>
