--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Japanese Recipes</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="mediaqueries.css">
     </head>
     <body>
         <div class="main-container">
