refactor and remove media query file

--- a/recipes/chicken-yakisoba.html
+++ b/recipes/chicken-yakisoba.html
@@ -1,47 +1,70 @@
 <!DOCTYPE html>
 <html>
-    <head lang="en">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <Title>Chicken Yakisoba</Title>
-        <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="../mediaqueries.css">
-    </head>
-    <body>
-        <div class="recipe-container">
-            <div class="content-left">
-                <a href="../index.html" class="abtn-back"> Back</a>
-                <h1>Chicken Yakisoba</h1>
-                <div class="img-recipe">
-                    <img src="../img/chicken-yakisoba-pic.jpg" alt="Chicken Yakisoba">
-                </div>
-                <h2>Chicken noodle dish</h2>
-                <p>This traditional Japanese yakisoba noodle dish includes cabbage and chicken in a spicy sauce.</p>
-            </div>
-            <div class="content-right">
-                <h3>Ingridients</h3>
-                <ul>
-                    <li><span>2</span> tablespoons canola oil</li>
-                    <li><span>1</span> tablespoon sesame oil</li>
-                    <li><span>2</span> skinless, boneless chicken breast halves - cut into bite-size pieces</li>
-                    <li><span>2</span> cloves garlic, minced</li>
-                    <li><span>2</span> tablespoons Asian-style chile paste</li>
-                    <li><span>1/2</span> cup soy sauce</li>
-                    <li><span>1</span> tablespoon canola oil</li>
-                    <li><span>1/2</span> medium head cabbage, thinly sliced</li>
-                    <li><span>1</span> onion, sliced</li>
-                    <li><span>2</span> carrots, cut into matchsticks</li>
-                    <li><span>1</span> tablespoon salt</li>
-                    <li><span>2</span> pounds cooked yakisoba noodles</li>
-                    <li><span>2</span> tablespoons pickled ginger, or to taste (Optional)</li>
-                </ul>
-                <h3>Steps</h3>
-                <ol>
-                    <li>Heat 2 tablespoons canola oil and sesame oil in a large skillet over medium-high heat. Cook and stir chicken and garlic in hot oil until fragrant, about 1 minute. Stir chile paste into chicken mixture; cook and stir until chicken is completely browned, 3 to 4 minutes. Add soy sauce and simmer for 2 minutes. Pour chicken and sauce into a bowl.</li>
-                    <li>Heat 1 tablespoon canola oil in the skillet over medium-high heat; cook and stir cabbage, onion, carrots, and salt in hot oil until cabbage is wilted, 3 to 4 minutes.</li>
-                    <li>Stir the chicken mixture into the cabbage mixture. Add noodles; cook and stir until noodles are hot and chicken is no longer pink inside, 3 to 4 minutes. Garnish with pickled ginger.</li>
-                </ol>
-            </div>
+  <head lang="en">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chicken Yakisoba</title>
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../mediaqueries.css" />
+  </head>
+  <body>
+    <div class="recipe-container">
+      <div class="content-left">
+        <a href="../index.html" class="abtn-back"> Back</a>
+        <h1>Chicken Yakisoba</h1>
+        <div class="img-recipe">
+          <img src="../img/chicken-yakisoba-pic.jpg" alt="Chicken Yakisoba" />
         </div>
-    </body>
+        <h2>Chicken noodle dish</h2>
+        <p>
+          This traditional Japanese yakisoba noodle dish includes cabbage and
+          chicken in a spicy sauce.
+        </p>
+      </div>
+      <div class="content-right">
+        <h3>Ingridients</h3>
+        <ul>
+          <li><span>2</span> tablespoons canola oil</li>
+          <li><span>1</span> tablespoon sesame oil</li>
+          <li>
+            <span>2</span> skinless, boneless chicken breast halves - cut into
+            bite-size pieces
+          </li>
+          <li><span>2</span> cloves garlic, minced</li>
+          <li><span>2</span> tablespoons Asian-style chile paste</li>
+          <li><span>1/2</span> cup soy sauce</li>
+          <li><span>1</span> tablespoon canola oil</li>
+          <li><span>1/2</span> medium head cabbage, thinly sliced</li>
+          <li><span>1</span> onion, sliced</li>
+          <li><span>2</span> carrots, cut into matchsticks</li>
+          <li><span>1</span> tablespoon salt</li>
+          <li><span>2</span> pounds cooked yakisoba noodles</li>
+          <li>
+            <span>2</span> tablespoons pickled ginger, or to taste (Optional)
+          </li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+          <li>
+            Heat 2 tablespoons canola oil and sesame oil in a large skillet over
+            medium-high heat. Cook and stir chicken and garlic in hot oil until
+            fragrant, about 1 minute. Stir chile paste into chicken mixture;
+            cook and stir until chicken is completely browned, 3 to 4 minutes.
+            Add soy sauce and simmer for 2 minutes. Pour chicken and sauce into
+            a bowl.
+          </li>
+          <li>
+            Heat 1 tablespoon canola oil in the skillet over medium-high heat;
+            cook and stir cabbage, onion, carrots, and salt in hot oil until
+            cabbage is wilted, 3 to 4 minutes.
+          </li>
+          <li>
+            Stir the chicken mixture into the cabbage mixture. Add noodles; cook
+            and stir until noodles are hot and chicken is no longer pink inside,
+            3 to 4 minutes. Garnish with pickled ginger.
+          </li>
+        </ol>
+      </div>
+    </div>
+  </body>
 </html>
