--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head lang="en">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Japanese Recipes</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="mediaqueries.css">
-    </head>
-    <body>
-        <div class="main-container">
-            <header>
-                <h1 class="header-h1">Japanese <span>Recipes</span></h1>
-            </header>
-            <div class="content-index">
-                <ul class="ul-index">
-                    <li><img src="./img/kastudon-pic.jpg" alt="Katsudon" class="img-index"><a href="./recipes/katsudon.html">Katsudon</a></li>
-                    <li><img src="./img/Beef-sukiyaki-pic.jpg" alt="Beff-sukiyaki"  class="img-index"><a href="./recipes/beef-sukiyaki.html">Beef Sukiyaki</a></li>
-                    <li><img src="./img/chicken-yakisoba-pic.jpg" alt="chicken-yakisoba"  class="img-index"><a href="./recipes/chicken-yakisoba.html">Chicken Yakisoba</a></li>
-                </ul>
-            </div>
-        </div>
-    </body>
+  <head lang="en">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Japanese Recipes</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main-container">
+      <header>
+        <h1 class="header-h1">Japanese <span>Recipes</span></h1>
+      </header>
+      <div class="content-index">
+        <ul class="ul-index">
+          <li>
+            <img
+              src="./img/kastudon-pic.jpg"
+              alt="Katsudon"
+              class="img-index"
+            /><a href="./recipes/katsudon.html">Katsudon</a>
+          </li>
+          <li>
+            <img
+              src="./img/Beef-sukiyaki-pic.jpg"
+              alt="Beff-sukiyaki"
+              class="img-index"
+            /><a href="./recipes/beef-sukiyaki.html">Beef Sukiyaki</a>
+          </li>
+          <li>
+            <img
+              src="./img/chicken-yakisoba-pic.jpg"
+              alt="chicken-yakisoba"
+              class="img-index"
+            /><a href="./recipes/chicken-yakisoba.html">Chicken Yakisoba</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
